# img2table

./: pyproject.toml
src/img2table/document/base/: __init__.py  rotation.py
src/img2table/tables/: image.py  metrics.py
src/img2table/tables/objects/: extraction.py
src/img2table/tables/processing/bordered_tables/cells/: identification.py
src/img2table/tables/processing/borderless_tables/: whitespaces.py
src/img2table/tables/processing/borderless_tables/layout/: rlsa.py
